<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_layout"
        android:icon="@drawable/ic_layout"
        android:title="@string/action_layout"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/pane_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_find"
        android:title="@string/action_find"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_desktop"
        android:checkable="true"
        android:title="@string/action_desktop"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_external"
        android:title="@string/action_external"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
